--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
+
+{% block head %}
+    {% include 'header.html' %}
+{% endblock head %}
+    
 {% block page %}
 {% include "navbar.html " %}
 <!-- <h1 style="text-align: center;">Congratulations you have successfully Registered with our course</h1> -->
