--- a/templates/payment.html
+++ b/templates/payment.html
@@ -6,7 +6,7 @@
 {% endblock head %}
     
 {% block page %}
-{% include "navbar.html " %}
+{% include 'navbar.html' %}
 <!-- <h1 style="text-align: center;">Congratulations you have successfully Registered with our course</h1> -->
 <div style="min-height: 100vh; background-image: url('{% static "images/register_success.png" %}');">
     <div class=" container-fluid">
